[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qdive"
version = "0.1.0"
description = "QPR Data Interpretation and Visualization Environment"
authors = [{ name = "Dmitry-LO" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qdive*"]
